used flex-flow: row wrap to make WorkoutsDropdowns.js pretty added if statement to make sure includes all the necessary input data in the WorkoutForm

--- a/front-end/src/components/styles/WorkoutsView.sass
+++ b/front-end/src/components/styles/WorkoutsView.sass
@@ -3,19 +3,20 @@
 
 .workouts-view
   display: flex
-  
+  margin-left: 4%
 
 .workouts-form
+  margin-top: 0%
   display: flex
   flex-direction: column
+  align-self: flex-start
   form
     display: flex
     flex-direction: column
 
-.workouts-dropdowns
-  width: 381px
-  border: 3px solid black
-  cursor: finger
+.workouts-dropdowns-container
+  display: flex;
+  flex-flow: wrap;
 
 .Collapsible
   cursor: pointer
